# flipr

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
.cargo/: config.toml
flipr-core/: Cargo.toml
flipr-core/src/: lib.rs
flipr-examples/: Cargo.toml
flipr-examples/src/: basic_usage.rs
flipr-macros/: Cargo.toml
flipr-macros/src/: lib.rs
flipr-ops/: Cargo.toml
flipr-ops/src/: lib.rs
flipr-transform/: Cargo.toml
flipr-transform/src/: lib.rs
flipr/core/: Cargo.toml
flipr/core/src/: traits.rs
flipr/space/: Cargo.toml
flipr/space/src/: lib.rs  offset.rs  place.rs  real.rs  scale.rs  tests.rs
