[package]
name = "flipr-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
flipr-core = { workspace = true }
flipr-transform = { workspace = true }
flipr-ops = { workspace = true }

[[bin]]
name = "basic_usage"
path = "src/basic_usage.rs"
